# xgboost-ocaml

./: .gitignore  BENCH.md  CHANGES.md  LICENSE  README.md  architecture.md  dune-project  xgboost-bench.opam  xgboost-ocaml.md  xgboost.opam
.github/workflows/: ci.yml
bench/: README.md
bench/bindings/: dune  perf.ml
bench/python/: perf.py
bench/xgboost/: dune  perf.ml  perf_scale.ml
config/: discover.ml
scripts/: regen-fixtures.sh  run-asan.sh
src/bindings/: dune  function_description.ml  type_description.ml
src/xgboost/: array_interface.ml  booster.ml  cv.ml  dmatrix.ml  dune  error.ml  eval.ml  internal.ml  streaming.ml  xgboost.ml  xgboost.mli
test/bindings/: check.ml  dune
test/fixtures/: check_predictions.txt  check_setup.md
test/xgboost/: check.ml  dune  props.ml  test_eval_cv.ml
